// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "lab3/game/helloworld";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.

service Comunication {
    
    // Sends Comands_Informantes
    rpc Comands_Informantes_Broker (ComandIBRequest) returns (ComandIBReply) { }

    // Sends Comands_Leia
    rpc Comands_Leia_Broker (ComandLBRequest) returns (ComandLBReply) { }

    // Sends Comands_Broker_Fulcrum
    rpc Comands_Broker_Fulcrum (ComandBFRequest) returns (ComandBFReply) { }

    // Sends Comands_Informantes_Fulcrum
    rpc Comands_Informantes_Fulcrum (ComandIFRequest) returns (ComandIFReply) { }

    // Sends Comands_Request_Hashing
    rpc Comands_Request_Hashing (PingMsg) returns (HashRepply) { }
    // Sends Comands_Fulcrum_Fulcrum
    rpc Comands_Fulcrum_Fulcrum (ComandFFDone) returns (PingMsg) { }

}

message ComandIBRequest {
  string operacion = 1; // 1: AddCity , 2: UpdateName, 3: UpdateNumber, 4: DeleteCity
  string nombre_planeta = 2;
  string nombre_ciudad = 3;
  string valor = 4;
  repeated int32 reloj_vector = 5; // ['x', 'y', 'z']
}

message ComandIBReply {
  string ip = 1; // Direcci√≥n IP de server Fulcrum Aleatoria
}

message ComandLBRequest {
  string operacion = 1; // GetNumberRebelds
  string nombre_planeta = 2;
  string nombre_ciudad = 3;
  repeated int32 reloj_vector = 4;
}

message ComandLBReply {
  string cant_rebelds = 1; 
  repeated int32 reloj_vector = 2; // ['x', 'y', 'z']
}

message ComandBFRequest {
  string operacion = 1; // GetNumberRebelds
  string nombre_planeta = 2;
  string nombre_ciudad = 3;
  string ip = 4;
}

message ComandBFReply {
  string cant_rebelds = 1; 
  repeated int32 reloj_vector = 2; // ['x', 'y', 'z']
}

message ComandIFRequest {
  string operacion = 1; // 1: AddCity , 2: UpdateName, 3: UpdateNumber, 4: DeleteCity
  string nombre_planeta = 2;
  string nombre_ciudad = 3;
  string valor = 4;
  string ip = 5;
}

message ComandIFReply {
  repeated int32 reloj_vector = 1; // ['x', 'y', 'z']

}

message PingMsg {
  string signal = 1;
}

message HashRepply {
  message KeyValue {
    string planeta = 1;
    repeated int32 reloj_vector= 2;
  }
  repeated KeyValue hashing = 1;
}


message ComandFFDone {
  repeated string text = 1;
  repeated int32 reloj_vector = 2; // ['x', 'y', 'z']
}
